# project-manager

./: README.md  components.json  generate-icons.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.qoder/rules/: project_rules.md
docs/: PRD.md
docs/prd/: 01-product-definition.md  02-users-and-scenarios.md  03-information-architecture.md  04-feature-requirements.md  05-data-model.md  06-page-planning.md  07-ui-and-tech.md  08-mvp-and-milestones.md  09-acceptance-and-future.md
docs/技术方案/: Tauri2打开本地文件夹技术方案.md  Tauri2按钮调用CLI命令技术方案.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/program/: icon.icns
src-tauri/icons/qoder/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/archive/: page.tsx
src/app/files/: page.tsx
src/app/projects/: page.tsx
src/app/projects/[id]/: page.tsx
src/app/projects/_id_backup/: page.tsx
src/app/recent/: page.tsx
src/app/settings/: page.tsx
src/app/tags/: page.tsx
src/components/: file-form.tsx  folder-link.tsx  project-detail.tsx  project-form.tsx  sidebar.tsx  tag-form.tsx
src/components/ui/: alert-dialog.tsx  badges.tsx  confirm-dialog.tsx  dropdown-menu.tsx  empty-state.tsx  modal.tsx  select.tsx  sheet.tsx  sonner.tsx  toast.tsx
src/lib/: open-folder.ts  store.ts  types.ts  use-store.ts
tools/: README.md
tools/generate-icons/: README.md  generate-icons.py
